<resources>
    <string name="app_name">Bird</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="none" />
    <string name="title_size_1">1.5%</string>
    <string name="title_size_2">2%</string>
    <string name="title_size_3">2.5%</string>
    <string name="context_size_1">2.5%</string>
    <string name="context_size_2">2.5%</string>
    <string name="context_size_3">2.5%</string>
    <string name="item_context_size_1">26%</string>
    <string name="item_context_size_2">20%</string>
    <string name="item_context_size_3">40%</string>
    <string name="del_size">20%w</string>
    <string name="common_padding_left">6%w</string>
    <string name="common_padding_right">3%w</string>
    <string name="common_padding_top">3%h</string>
    <string name="common_padding_bottom">3%h</string>
    <string name="half">50%</string>
    <string name="all">100%</string>
    <string name="title_activity_pay_balance_list">PayBalanceListActivity</string>
    <string name="title_filter_textsize">26%</string>
    <string name="listmanager">80%h</string>
    <string name="sixtyPercentHeight">70%h</string>
    <string name="welcom_go_now">点击跳过>></string>
    <string name="index">首页</string>
    <string name="custom_service">客服</string>
    <string name="mine">我的</string>
    <string name="help">帮助</string>
    <string name="msg">消息</string>
    <string name="allofthem">全部</string>
    <string name="tool1">订单管理</string>
    <string name="tool2">预报管理</string>
    <string name="tool3">库存动态</string>
    <string name="tool4">进销存管理</string>
    <string name="tool5">我的支出</string>
    <string name="tool6">账户充值</string>
    <string name="edit">返回</string>
    <string name="tools">管理工具</string>
    <string name="data">数据看板</string>
    <string name="myaccount_recharge">充值</string>
    <string name="myaccount_details">收支明细</string>
    <string name="myaccount_manage">账户管理</string>
    <string name="myaccount_title_1">充值</string>
    <string name="myaccount_title_2">收支明细</string>
    <string name="myaccount_title_3">账户管理</string>
    <string name="cost_type_1">所有</string>
    <string name="cost_type_2">运费支出</string>
    <string name="cost_type_3">仓租</string>
    <string name="cost_type_4">关税</string>
    <string name="cost_type_5">充值记录</string>
    <string name="cost_type_6">其他</string>
    <string name="cost_miss_code">缺失订单号</string>
    <string name="cost_order_code">订单号</string>
    <string name="cost_order_count">支出金额</string>
    <string name="myaccount_select_all">所有</string>
    <string name="myaccount_select_settingdate">设置时间段</string>
    <string name="select_start_end_date">交易时间</string>
    <string name="start_date">开始日期:</string>
    <string name="end_date">结束日期:</string>
    <string name="pick_date_cancel">取消</string>
    <string name="pick_date_clear">清空</string>
    <string name="pick_date_sure">确定</string>
    <string name="tip_pick_date1">开始时间必须在结束时间之前!</string>
    <string name="tip_pick_date2">开始时间必须在今天之前!</string>
    <string name="tip_pick_date3">结束时间必须在今天之前!</string>
    <string name="tip_myaccount_needlogin">需要登录获取数据!</string>
    <string name="tip_myaccount_getdatawrong">获取数据失败!</string>
    <string name="tip_myaccount_prasedatawrong">解析数据失败!</string>
    <string name="tip_myaccount_nodata">没有数据可以加载!</string>
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">放送开始刷新</string>
    <string name="listview_loading">加载中...</string>
    <string name="nomore_loading"></string>
    <string name="refreshing">刷新中...</string>
    <string name="refresh_done">刷新完毕</string>
    <string name="listview_header_last_time"></string>
    <string name="monday">周日</string>
    <string name="tuesday">周一</string>
    <string name="wednesday">周二</string>
    <string name="thursday">周三</string>
    <string name="friday">周四</string>
    <string name="saturday">周五</string>
    <string name="sunday">周六</string>
    <string name="username_hint">输入帐号</string>
    <string name="password_hint">输入密码</string>
    <string name="login">登  录</string>
    <string name="register">用户注册</string>
    <string name="forgetpassword">忘记密码</string>
    <string name="notempty">用户名或密码不能为空</string>
    <string name="loginsu">登录成功</string>
    <string name="loginfa">用户名或密码错误</string>
    <string name="login_no_token">登录失败，请重新登陆</string>
    <string name="login_fail">连接失败，请稍后重试！</string>
    <string name="welcome">亲，欢迎您！</string>
    <string name="iconchange_title">修改头像</string>
    <string name="iconchange_save">保存</string>
    <string name="photo">拍照</string>
    <string name="from_loacl">从手机相册获取</string>
    <string name="upload_fail">上传图片失败！</string>
    <string name="save_fail">保存头像失败！</string>
    <string name="recharge_title">充值</string>
    <string name="recharge_translute_account">运费账户</string>
    <string name="recharge_tax_account">关税账户</string>
    <string name="recharge_pay_now">立即支付</string>
    <string name="recharge_pay_count">充值金额:</string>
    <string name="recharge_moneyinput">输入金额</string>
    <string name="recharge_type_zhifubao">支付宝充值</string>
    <string name="base_message">企业基本信息</string>
    <string name="state_Warehouse">全部仓库</string>
    <string name="state_all">全部状态</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_message">企业主营信息</string>
    <string name="contacts_message">联系人信息</string>
    <string name="business_message">业务模式及要求</string>
    <string name="sign_company_name">签约公司名称：</string>
    <string name="company_short_name">公司简称：</string>
    <string name="headquarters_address">总部所在地：</string>
    <string name="detail_address">详细地址：</string>
    <string name="main_market">主营市场：</string>
    <string name="order_pri">订单平均客单价：</string>
    <string name="principal">商务总负责人：</string>
    <string name="finance">财务对接人：</string>
    <string name="outin">出入库负责人：</string>
    <string name="it">IT对接人：</string>
    <string name="exception">异常件通知</string>
    <string name="phone_no">手机号：</string>
    <string name="email">邮箱：</string>
    <string name="patter_text">业务模式</string>
    <string name="pattern">业务模式：</string>
    <string name="clear_server">清关服务：</string>
    <string name="outaccount">退出账户</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_us_title">关于我们</string>
    <string name="about_us_content">\t\t\t\t笨鸟海淘是第三方转运物流服务商，成立于2014年1月，致力于为跨境电商提供优质物流仓储管理以及代理清关等服务。笨鸟海淘目前在全球一共开设6个仓库，分别是美国波特兰仓、美国LA仓、澳洲悉尼仓、香港仓、日本仓、韩国仓，2016年将陆续推出德国仓、英国仓、澳洲墨尔本、美国纽约、意大利等仓库。</string>
    <string name="about_us_www">手机访问：www.birdex.cn</string>
    <string name="about_us_version">当前版本：B1.0.1 for Android</string>
    <string name="mine_index_title">我的</string>
    <string name="logistics_tracking">物流跟踪</string>
    <string name="service_type">联系客服</string>
    <string name="change_address">修改地址</string>
    <string name="commodity_code">商品编码:</string>
    <string name="inventory_title">我的库存</string>
    <string name="inventory_item_1">在库商品</string>
    <string name="inventory_item_2">待入库商品</string>
    <string name="inventory_search_hint">输入商品编码或UPC或商品名</string>
    <string name="inventory_all">全部仓库</string>
    <string name="inventory_sort_time">时间排序</string>
    <string name="inventory_sort_available">可用数量</string>
    <string name="inventory_sort_willin">待入数量</string>
    <string name="inventory_all_data">共@条数据</string>
    <string name="inventory_tip_1">获取库存数据失败!</string>
    <string name="inventory_tip_2">库存数据解析失败!</string>
    <string name="inventory_tip_3">数据已经加载完毕!</string>
    <string name="inventory_item_none">无</string>
    <string name="inventory_item_code">商品编码:</string>
    <string name="inventory_item_detail">查看详情</string>
    <string name="inventory_item_available">可用</string>
    <string name="inventory_item_occupancy">占用</string>
    <string name="inventory_item_actual">实际</string>
    <string name="inventory_item_inventory">所在仓</string>
    <string name="inventory_willin_item_num">待入库数</string>
    <string name="inventory_noname">仓库名缺失</string>
    <string name="consignee">收货人：</string>
    <string name="phone">联系电话：</string>
    <string name="region">所在地区：</string>
    <string name="detail_adress">详细地址：</string>
    <string name="change_adress">修改收货地址</string>
    <string name="confirm">确 定</string>
    <string name="consignee_empty">收货人不能为空</string>
    <string name="phone_empty">联系电话不能为空</string>
    <string name="adress_empty">详细地址不能为空</string>
    <string name="change_fail">修改失败！</string>
    <string name="change_suc">修改成功！</string>
    <string name="par_error">参数错误，请重新输入！</string>
    <string name="order_number">订单号：</string>
    <string name="client_number">客户单号：</string>
    <string name="receiver">收件人：</string>
    <string name="getorder">仓库接单</string>
    <string name="orderout">订单出库</string>
    <string name="fly">航空运输</string>
    <string name="clear">清关</string>
    <string name="transportation">国内运输</string>
    <string name="sign">签收</string>
    <string name="track">当前轨迹</string>
    <string name="transport">已运送：</string>
    <string name="out_storage">出库时间：</string>
    <string name="copy_logistics">复制物流信息</string>
    <string name="copy_tip">内容已经复制到剪切板</string>
    <string name="track_after">物流跟踪</string>
    <string name="recharge">充  值</string>
    <string name="myaccount">我的账户</string>
    <string name="account_detail">账户明细</string>
    <string name="account_type">账户类型</string>
    <string name="balance">余额</string>
    <string name="credit">信用/可用</string>
    <string name="freight">运费</string>
    <string name="tariff">关税</string>
    <string name="recharge_tip1">请选择充值账户!</string>
    <string name="recharge_tip2">请输入充值金额!</string>
    <string name="recharge_tip3">金额输入有误!</string>
    <string name="recharge_tip4">获取充值用户ID异常!</string>
    <string name="recharge_tip5">获取充值加密数据失败!</string>
    <string name="recharge_tip6">充值金额输入有误!</string>
    <string name="recharge_tip7">请填写合适的金额!</string>
    <string name="recharge_tip8">充值出现异常!</string>
    <string name="recharge_tip9">充值金额超过最大限制!</string>
    <string name="please_wail">敬请期待</string>
    <string name="time_all">不限时间</string>
    <string name="time_today">今天</string>
    <string name="time_week">近一周</string>
    <string name="time_month">近一个月</string>
    <string name="time_three_month">近三个月</string>
    <string name="time_year">近一年</string>
    <string name="no_data">暂时没有数据哦！</string>
    <string name="parse_error">解析失败,请重试!</string>
    <string name="title_activity_noti_list">NotiListActivity</string>
    <string name="tv_detail_inner_available">可用库存：</string>
    <string name="tv_detail_inner_occupancy">订单占用：</string>
    <string name="tv_detail_inner_in">总入库量：</string>
    <string name="tv_detail_inner_out">总出库量：</string>
    <string name="tv_detail_inner_allowout">允许超售量：</string>
    <string name="tv_detail_inner_diff">差异：</string>
    <string name="tv_detail_inner_broken">损耗：</string>
    <string name="tv_detail_inner_actual">实际数量：</string>
    <string name="product_name">商品名称：</string>
    <string name="upc_code">UPC码：</string>
    <string name="product_code">商品编码：</string>
    <string name="customs_code">海关备案号：</string>
    <string name="weight">重量kg：</string>
    <string name="capacity">长*宽*高cm：</string>
    <string name="declare_price">申报价格：</string>
    <string name="product_composition">商品成分：</string>
    <string name="product_describte">商品描述：</string>
    <string name="available_count">可用库存总数：</string>
    <string name="message">提示消息</string>
    <string name="system_tone">系统提示音</string>
    <string name="system_tone_no">不提示，只在消息中显示</string>
    <string name="no_receive">休息时间免接收</string>
    <string name="message_time">消息接收时间</string>
    <string name="all_day">全天接收</string>
    <string name="time_detail">21:00-09：00（次日）</string>
    <string name="btn_confirm">确 认</string>
    <string name="tv_cancel">取 消</string>
    <string name="tv_review_Storage_reason">输入复核的原因:</string>
</resources>