<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.zhy.android.percent.support.PercentLinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/pll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <include
            layout="@layout/single_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />

        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_heightPercent="10%">

            <TextView
                android:id="@+id/tv_index"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/index"
                android:textColor="@color/menu_item_color_selector"
                app:layout_textSizePercent="@string/item_context_size_1" />

            <TextView
                android:id="@+id/tv_custom_service"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/custom_service"
                android:textColor="@color/menu_item_color_selector"
                app:layout_textSizePercent="@string/item_context_size_1" />

            <TextView
                android:id="@+id/tv_help"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/help"
                android:textColor="@color/menu_item_color_selector"
                app:layout_textSizePercent="@string/item_context_size_1" />

            <TextView
                android:id="@+id/tv_mine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mine"
                android:textColor="@color/menu_item_color_selector"
                app:layout_textSizePercent="@string/item_context_size_1" />
        </com.zhy.android.percent.support.PercentLinearLayout>
    </com.zhy.android.percent.support.PercentLinearLayout>

    <com.zhy.android.percent.support.PercentFrameLayout
        android:id="@+id/main_framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/pll"></com.zhy.android.percent.support.PercentFrameLayout>
</com.zhy.android.percent.support.PercentRelativeLayout>