<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:background="@color/white"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_detail_inner_name"
            android:layout_width="match_parent"
            android:background="@color/blue_4"
            android:textSize="@dimen/detail_inner_item_font"
            android:paddingLeft="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textSize="@dimen/detail_inner_item_font"
            android:text="@string/tv_detail_inner_in" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textSize="@dimen/detail_inner_item_font"
            android:text="@string/tv_detail_inner_diff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1.0"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:textSize="@dimen/detail_inner_item_font"
            android:background="@color/blue_4"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_detail_inner_in"
            android:textSize="@dimen/detail_inner_item_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_detail_inner_diff"
            android:textSize="@dimen/detail_inner_item_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:textSize="@dimen/detail_inner_item_font"
            android:background="@color/blue_4"
            android:layout_height="wrap_content"
            android:text="@string/tv_detail_inner_available" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/detail_inner_item_font"
            android:text="@string/tv_detail_inner_out" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/detail_inner_item_font"
            android:text="@string/tv_detail_inner_broken" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1.0"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_detail_inner_available"
            android:background="@color/blue_4"
            android:layout_width="match_parent"
            android:textSize="@dimen/detail_inner_item_font"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_detail_inner_out"
            android:layout_width="wrap_content"
            android:textSize="@dimen/detail_inner_item_font"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_detail_inner_broken"
            android:layout_width="wrap_content"
            android:textSize="@dimen/detail_inner_item_font"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_4"
            android:textSize="@dimen/detail_inner_item_font"
            android:text="@string/tv_detail_inner_occupancy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/detail_inner_item_font"
            android:text="@string/tv_detail_inner_allowout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/detail_inner_item_font"
            android:text="@string/tv_detail_inner_actual" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1.0"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_detail_inner_occupancy"
            android:background="@color/blue_4"
            android:layout_width="match_parent"
            android:textSize="@dimen/detail_inner_item_font"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_detail_inner_allowout"
            android:layout_width="wrap_content"
            android:textSize="@dimen/detail_inner_item_font"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_detail_inner_actual"
            android:layout_width="wrap_content"
            android:textSize="@dimen/detail_inner_item_font"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>