<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="30dp"
        android:text="@string/message" />

    <com.zhy.android.percent.support.PercentLinearLayout
        android:id="@+id/warning_tone_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_widthPercent="45%">

            <com.rey.material.widget.RadioButton
                android:id="@+id/warning_tone_rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:text="@string/system_tone"
                android:textColor="#666666" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.rey.material.widget.RadioButton
                android:id="@+id/warning_tone_rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/system_tone_no"
                android:textColor="#666666" />
        </LinearLayout>

    </com.zhy.android.percent.support.PercentLinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="25dp"
        android:text="@string/message_time" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_widthPercent="45%">

                <com.rey.material.widget.RadioButton
                    android:id="@+id/time_rb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/all_day"
                    android:textColor="#666666" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.rey.material.widget.RadioButton
                    android:id="@+id/time_rb2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/no_receive"
                    android:textColor="#666666" />
            </LinearLayout>


        </com.zhy.android.percent.support.PercentLinearLayout>

        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="right" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_marginLeftPercent="6%"
                android:textColor="#8D8C8E"
                android:layout_weight="1"
                android:text="@string/time_detail" />

        </com.zhy.android.percent.support.PercentLinearLayout>

    </LinearLayout>

</LinearLayout>