<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:alpha="204"
    android:background="@drawable/dialog_predicition_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/item_margin_top_height"
        android:layout_marginBottom="@dimen/item_margin_top_height">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/item_margin_top_height"
            android:text="@string/tv_review_Storage_reason"
            android:textSize="@dimen/dialog_title_text_size" />


        <EditText
            android:id="@+id/tv_review_Storage_reason"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="top|left"
            android:background="@drawable/detail_background"
            android:textSize="@dimen/dialog_title_text_size" />
    </LinearLayout>

    <include
        layout="@layout/single_line"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_cancel"
            android:textColor="@color/blue"
            android:textSize="@dimen/dialog_text_size" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/single_line" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/btn_confirm"
            android:textColor="@color/blue"
            android:textSize="@dimen/dialog_text_size" />
    </LinearLayout>

</LinearLayout>